<resources>
    <string name="app_name">Site Translation</string>
    <string name="admob_app_id">ca-app-pub-3924676263890790~2654234603</string>
    <string name="banner_ad_id">ca-app-pub-3924676263890790/2183461317</string>
    <string name="banner_ad_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="intro_main_contents">Web site\ntranslate</string>
    <string name="intro_contents">Let\'s translate what\nwe want to translate into Korean!</string>
    <string name="app_version">Version %s</string>
    <string name="move_top">Top</string>
    <string name="app_setting">App Setting</string>
    <string name="visit_history">Visit record</string>
    <string name="select_area">Choose an area</string>
    <string name="camera">Camera</string>
    <string name="translate_note">Translation Note</string>
    <string name="fab_description">no image.</string>
    <string name="ocr_error">Text extraction failed.</string>
    <string name="ocr_text_limit">Up to 350 characters can be extracted.\nPlease select the area again.</string>
    <string name="backward_finish">If you run Go Back one more time, it will end.</string>
    <string name="not_allow_empty">Spaces cannot be included.</string>
    <string name="input_address">Please enter web address.</string>
    <string name="tts_error">An unexpected error occurred.\nPlease try again in a little while.</string>
    <string name="no_results">There are no extracted results.</string>
    <string name="bottom_sheet_text1">Please check if there are any characters extracted incorrectly and translate them.</string>
    <string name="bottom_sheet_text2">Extraction results</string>
    <string name="bottom_sheet_text3">Translation results</string>
    <string name="bottom_sheet_text4">듣기</string>
    <string name="bottom_sheet_button">Translation</string>
    <string name="wait_please">Hold on a moment, please.</string>
    <string name="selected_translate_limit">Translation complete.\nTranslation of the selected area can be done up to three times.</string>
    <string name="translate_fail">An error has occurred.\nPlease try again in a little while.</string>
    <string name="no_text_have_been_changed">There are no changed letters.</string>
    <string name="add_note_explanation">You can add it to the translation note by pressing the top right button.</string>
    <string name="add_note">It has been added to the translation note.</string>
    <string name="empty_text">Please check if there are any empty characters.</string>
    <string name="not_support_language">The language you are using is not supported.</string>
    <string name="tts_init_fail">TTS initialization failed.</string>
    <string name="history_item_label">If you press the area, the translation result will be displayed.</string>
    <string name="history_dialog_title">Delete all visit records.</string>
    <string name="history_dialog_message">Are you sure you want to delete all visit records?</string>
    <string name="before_seven_days">※ You can only see it until the 7th.\nRecords that have passed 7 days will be deleted.</string>
    <string name="delete_all">All of them have all been deleted.</string>
    <string name="no_data">no data.</string>
    <string name="change_speed">The speed has changed.</string>
    <string name="change_default_url">The default address has been updated.</string>
    <string name="speech_speed">Reading speed.</string>
    <string name="change">change</string>
    <string name="look">Reading</string>
    <string name="default_url">The default address</string>
    <string name="terms_of_service">Terms and conditions.</string>
    <string name="history">Visit record.</string>
    <string name="license">License</string>
    <string name="note_no_item">There is no sentence added.</string>
    <string name="decline_permissions">It can be used after permission is allowed.</string>
    <string name="check">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="custom_dialog_text">A new version has been released.\nTry using a new feature.</string>
    <string name="input_default_address">Please enter the web address to use.</string>
</resources>