<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_rounded_16"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/input_default_address"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_light_grey_16"
        android:gravity="start"
        android:hint="@string/input_address"
        android:inputType="textUri"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/check"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextUrl"
        app:layout_constraintStart_toStartOf="@+id/editTextUrl"
        app:layout_constraintTop_toBottomOf="@+id/editTextUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>