<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.views.main.appsetting.AppSettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewIcon1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_window"
        android:backgroundTint="@color/intro_text_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar" />

    <TextView
        android:id="@+id/settingUrlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/default_url"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewIcon1"
        app:layout_constraintStart_toEndOf="@+id/viewIcon1"
        app:layout_constraintTop_toTopOf="@+id/viewIcon1" />

    <EditText
        android:id="@+id/settingUrlEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_light_grey_rounded_12"
        android:ellipsize="end"
        android:inputType="textUri|textMultiLine"
        android:maxLines="2"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingUrlTextView"
        tools:ignore="Autofill,LabelFor"
        tools:text="www.google.com/google.com/google.com/google.com/google.com/google.com" />

    <TextView
        android:id="@+id/urlEditButton"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:layout_margin="4dp"
        android:background="@drawable/bg_white_rounded_16"
        android:backgroundTint="@color/teal_200"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settingUrlEditText"
        app:layout_constraintEnd_toEndOf="@+id/settingUrlEditText" />

    <View
        android:id="@+id/viewIcon2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_speed"
        android:backgroundTint="@color/intro_text_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingUrlEditText" />

    <TextView
        android:id="@+id/speakSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/speech_speed"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewIcon2"
        app:layout_constraintStart_toEndOf="@+id/viewIcon2"
        app:layout_constraintTop_toTopOf="@+id/viewIcon2" />

    <androidx.cardview.widget.CardView
        android:id="@id/speakSpeedCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speakSpeedTextView">

        <Spinner
            android:id="@+id/speakSpeedSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Spinner"
            tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewIcon3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_history"
        android:backgroundTint="@color/intro_text_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speakSpeedCardView" />

    <TextView
        android:id="@+id/historyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/history"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewIcon3"
        app:layout_constraintStart_toEndOf="@+id/viewIcon3"
        app:layout_constraintTop_toTopOf="@+id/viewIcon3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHistory"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_main_rounded_12"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_arrow_forward"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewIcon4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_description"
        android:backgroundTint="@color/intro_text_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHistory" />

    <TextView
        android:id="@+id/licenseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/license"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewIcon4"
        app:layout_constraintStart_toEndOf="@+id/viewIcon4"
        app:layout_constraintTop_toTopOf="@+id/viewIcon4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLicense"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_main_rounded_12"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewIcon4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/look"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_arrow_forward"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>